--- a/app/src/main/res/layout/content_detail_reference_item.xml
+++ b/app/src/main/res/layout/content_detail_reference_item.xml
@@ -13,10 +13,10 @@ android:layout_margin="16dp">
 
 
     <TextView
-            android:id="@+id/show_detail_item_name"
+            android:id="@+id/detail_item_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/edit_text_hint"/>
+            android:textSize="20sp"/>
 
     <LinearLayout
             android:layout_width="match_parent"
