--- a/app/src/main/res/layout/reference_activity_list_item.xml
+++ b/app/src/main/res/layout/reference_activity_list_item.xml
@@ -5,7 +5,7 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="horizontal"
               android:layout_margin="16dp"
-              android:background="@drawable/custom_button">
+              android:background="@drawable/custom_button" android:baselineAligned="false">
     <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -28,9 +28,9 @@
             android:layout_height="0dp"
             android:textSize="16sp"
             android:textColor="@android:color/white"
-            android:paddingLeft="4dp"
+            android:paddingStart="4dp"
             android:paddingTop="2dp"
-            android:paddingRight="2dp"/>
+            android:paddingEnd="2dp"/>
     <TextView
             android:layout_weight="2"
             android:id="@+id/reference_activity_list_item_text_view_3"
@@ -38,9 +38,9 @@
             android:layout_height="0dp"
             android:textSize="16sp"
             android:textColor="@android:color/white"
-            android:paddingLeft="4dp"
+            android:paddingStart="4dp"
             android:paddingTop="2dp"
-            android:paddingRight="2dp"/>
+            android:paddingEnd="2dp"/>
     </LinearLayout>
     <!--<ImageButton-->
             <!--android:id="@+id/reference_activity_image_button"-->
